Added marker probability plots

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 /mpMap2.aux
 /mpMap2.bbl
 /mpMap2.blg
+/mpMap2.tex
+/texput.aux
+/texput.log
+/funnelsIllustration.pdf
+/approximatelyFlat1.pdf
+/approximatelyFlat2.pdf
+/approximatelyFlat3.pdf
+/approximatelyFlat4.pdf
