Changed pictures to mathematica

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-/MAGIC4.pdf
-/MAGIC8.pdf
-/mpMap2.pdf
+/*.pdf
 /mpMap2.out
 /mpMap2.log
 /mpMap2.aux
@@ -9,8 +7,3 @@
 /mpMap2.tex
 /texput.aux
 /texput.log
-/funnelsIllustration.pdf
-/approximatelyFlat1.pdf
-/approximatelyFlat2.pdf
-/approximatelyFlat3.pdf
-/approximatelyFlat4.pdf
